--- a/index.html
+++ b/index.html
@@ -5,5 +5,27 @@
   <title>Pepperi Test</title>
 </head>
 <body>
+
+  <h2>TEST</h2>
+
+  <div class="container">
+    <label for="textbox">Name/Value Pair</label>
+    <input type="text" id="textbox">
+    <button class="button">Add</button>
+  </div>
+
+  <h2>Name/Value Pair List</h2>
+
+  <div class="container">
+    <table class="table"></table>
+    <div class="button-group">
+      <button class="button" type="button">Sort by Name</button>
+      <button class="button" type="button">Sort by Value</button>
+      <button class="button" type="button">Delete</button>
+      <button class="button" type="button">Show XML</button>
+    </div>
+  </div>
+
+  <div class="xml-modal"></div>
 </body>
 </html>
