--- a/index.html
+++ b/index.html
@@ -2,30 +2,38 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pepperi Test</title>
+  <link rel="stylesheet" href="src/style/style.css" type="text/css">
 </head>
 <body>
-
-  <h2>TEST</h2>
-
-  <div class="container">
-    <label for="textbox">Name/Value Pair</label>
-    <input type="text" id="textbox">
-    <button class="button">Add</button>
-  </div>
-
-  <h2>Name/Value Pair List</h2>
-
-  <div class="container">
-    <table class="table"></table>
-    <div class="button-group">
-      <button class="button" type="button">Sort by Name</button>
-      <button class="button" type="button">Sort by Value</button>
-      <button class="button" type="button">Delete</button>
-      <button class="button" type="button">Show XML</button>
+  <header class="header">
+    <h1>TEST</h1>
+  </header>
+  <div class="wrap">
+    <div class="content">
+      <div class="container">
+        <label class="label" for="textbox">Name/Value Pair</label>
+        <input type="text" id="textbox">
+        <button class="btn btn-textbox" type="button">Add</button>
+      </div>
+    
+      <h3>Name/Value Pair List</h3>
+    
+      <div class="container container-list">
+        <table class="table">
+          <th><td>1</td><td>1</td><td>1</td></th>
+        </table>
+        <div class="btn-group">
+          <button class="btn" type="button">Sort by Name</button>
+          <button class="btn" type="button">Sort by Value</button>
+          <button class="btn" type="button">Delete</button>
+          <button class="btn" type="button">Show XML</button>
+        </div>
+      </div>
+      <div class="xml-modal">Lorem100</div>
     </div>
+    <footer>&copy Vladyslav Maistruk</footer>
   </div>
-
-  <div class="xml-modal"></div>
 </body>
 </html>
