--- a/index.html
+++ b/index.html
@@ -1,9 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Pepperi Test</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pepperi Test</title>
+    <link rel="stylesheet" href="src/css/style.css" type="text/css">
 </head>
 <body>
+    <div class="wrapper">
+        <div class="header">
+            <h1>Test Task</h1>
+        </div>
+        <div class="textbox">
+            <input type="text" required>
+            <span class="bar"></span>
+            <label>Name/Value Pair</label>
+        </div>
+        <div class="appending">
+            <button class="btn" type="button">Add</button>
+        </div>
+        <div class="list">
+            <div class="title">Name/Value List</div>
+            <table class="table"></table>
+        </div>
+        <div class="control">
+            <button class="btn" type="button">Sort by Name</button>
+            <button class="btn" type="button">Sort by Value</button>
+            <button class="btn" type="button">Delete</button>
+            <button class="btn" type="button">XML</button>
+        </div>
+        <div class="footer">
+            <span>&copy Vladyslav Maistruk</span>
+        </div>
+    </div>
 </body>
 </html>
