--- a/index.html
+++ b/index.html
@@ -8,20 +8,28 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">
+        <header>
             <h1>Test Task</h1>
-        </div>
+        </header>
         <div class="textbox">
             <input type="text" required>
             <span class="bar"></span>
             <label>Name/Value Pair</label>
+            <div class="error-message"></div>
         </div>
         <div class="appending">
             <button class="btn" type="button" id="add">Add</button>
         </div>
         <div class="list">
             <div class="title">Name/Value List</div>
-            <table class="table"></table>
+            <table></table>
+            <div class="xml-container">
+                <div class="popup">
+                    <h3>XML</h3>
+                    <a class="close" id="close-popup" href="#">&times;</a>
+                    <div class="content"></div>
+                </div>
+            </div>
         </div>
         <div class="control">
             <button class="btn" type="button" id="sort-by-name">Sort by Name</button>
@@ -29,10 +37,11 @@
             <button class="btn" type="button" id="delete">Delete</button>
             <button class="btn" type="button" id="xml">XML</button>
         </div>
-        <div class="footer">
+        <footer>
             <span>&copy Vladyslav Maistruk</span>
-        </div>
+        </footer>
     </div>
+    <script src="src/js/validator.js" type="text/javascript"></script>
     <script src="./src/js/list.js" type="text/javascript"></script>
     <script src="./src/js/app.js" type="text/javascript"></script>
     <script src="index.js" type="text/javascript"></script>
