App with webpack

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pepperi Test</title>
-    <link rel="stylesheet" href="src/css/style.css" type="text/css">
 </head>
 <body>
     <div class="container">
@@ -41,9 +40,6 @@
             <span>&copy Vladyslav Maistruk</span>
         </footer>
     </div>
-    <script src="src/js/validator.js" type="text/javascript"></script>
-    <script src="./src/js/list.js" type="text/javascript"></script>
-    <script src="./src/js/app.js" type="text/javascript"></script>
-    <script src="index.js" type="text/javascript"></script>
+    <script src="dist/bundle.js" type="text/javascript"></script>
 </body>
 </html>
